--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+OPEN_WEATHER_MAP_API_URL=http://api.openweathermap.org/data/2.5/
+OPEN_WEATHER_MAP_API_KEY=
